--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "langchain": "0.0.55",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
-    "pdf-parse": "1.1.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.5.141",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
